# compilador_haskell

./: .gitignore  LICENSE  README.md  haskell-compiler.cabal  run.sh
app/: Main.hs
docs/: grammar.bnf
resources/: ejemplo_codigo.txt  ejemplo_gramatica.y  ejemplo_if.txt  ejemplo_whileshort.txt  testRead.txt
src/: Evaluacion.hs  Evaluation  Evaluation copy.hs  Evaluation.hs  Grammar.hs  Grammar.y  Main  Main.hs  PascalTokens.hs  PascalTokens.x  Tokens  Tokens.hs  Tokens.md  Tokens.x  ejemplo_codigo.txt
test/: TestEvaluation.hs  TestGrammar.hs  TestLexical.hs  TestSintax.hs  TestTokens.hs  Tests.hs
test/resources/: ejemplo_codigo.txt  testAssign.txt  testRead.txt  testWhileShort.txt  testWrite.txt  testWriteExpr.txt
test/resources/testEvaluation/: testExpression.txt  testIf.txt  testWhile.txt
test/resources/testGrammar/: testRead.txt  testWhileLarge.txt
