name:                haskell-compiler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/EnriqueCepeda/compilador_haskell
license-file:        LICENSE
author:              Enrique Cepeda Villamayor and Raul Bernalte Sanchez
maintainer:          ecepedavillamayor@gmail.com,
                     
build-type:          Simple
extra-source-files:  README.md
data-files:          test/resources/*,
                     resources/*
cabal-version:       >= 2.0


library
  exposed-modules:     Tokens,
                       Paths_haskell_compiler,
                       Grammar,
                       Evaluation
  build-depends:       array >=0.5 && <0.6,
                       base >=4.12 && <4.13,
                       hashmap,
                       containers
  hs-source-dirs:      src
  build-tools:         alex, happy
  autogen-modules:     Paths_haskell_compiler
  default-language:    Haskell2010

executable haskell-compiler
  main-is:             Main.hs
  build-depends:       array >=0.5 && <0.6
                    ,  base >=4.12 && <4.13
                    ,  haskell-compiler 
  hs-source-dirs:      app
  build-tools:         alex, happy
  default-language: Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4.12 && <4.13,
                       haskell-compiler,
                       tasty,
                       tasty-hunit
  other-modules:       TestTokens,
                       TestGrammar
  hs-source-dirs:      test
  main-is:             Tests.hs             

source-repository head
  location:  https://github.com/EnriqueCepeda/compilador_haskell            
